syntax = "proto3";

option java_multiple_files = true;
option java_package="sample.masem.grpc";
option java_outer_classname ="HelloWorldProto";
option go_package = "google.golang.org/grpc/makoskitchen/demoapp";

package demoapp;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply){}
    rpc SayHelloAgain (HelloRequest) returns (HelloReply){}
}

message HelloRequest {
    string name= 1;
    string last_Name= 2;
}

message HelloReply {
    string message = 1;
}

